force-app/main/default/objects/CHSP_Service_Schedule__c/CHSP_Service_Schedule__c.object-meta.xml
<CustomObject>
    <label>CHSP Schedule Detail</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>CHSP Schedule Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CHSP Schedule Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>