force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Id__c</fullName>
    <label>Agreement Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>