force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Execute_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Execute_On_Date__c</fullName>
    <label>Execute On Date</label>
    <type>Date</type>
</CustomField>