force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Executed_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_On_Date__c</fullName>
    <label>Executed On Date</label>
    <type>Date</type>
</CustomField>