force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Link_To_Service__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link To Service</label>
    <type>Checkbox</type>
</CustomField>