force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Number_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service__c</fullName>
    <label>Number of Service</label>
    <summaryForeignKey>Service_with_CHSP_Schedule_Detail__c.CHSP_Schedule_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>