force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHSP Provider Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Commonwealth Home Support Programme</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CHSP Schedule Details</relationshipLabel>
    <relationshipName>CHSP_Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>