force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Party_Id__c</fullName>
    <label>Party Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>