force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Program_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Schedule_ID__c</fullName>
    <externalId>true</externalId>
    <label>Program Schedule ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>