force-app/main/default/objects/CHSP_Service_Schedule__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>CHSP Service Schedules</relationshipLabel>
    <relationshipName>CHSP_Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>