force-app/main/default/objects/CHSP_Service_Schedule__c/validationRules/CHSPSD_Must_Have_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>CHSPSD_Must_Have_Account</fullName>
    <active>true</active>
    <description>CHSP Service Detail must have an account.</description>
    <errorConditionFormula>ISBLANK(Organisation_Name__c)</errorConditionFormula>
    <errorMessage>CHSP Service Detail must have an account.</errorMessage>
</ValidationRule>